--- a/src/css/style.css
+++ b/src/css/style.css
@@ -144,6 +144,11 @@ body {
   margin: 0;
 }
 
+.disclaimer {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 a:link,
 a:visited {
   color: var(--bs-link-color);
@@ -250,6 +255,121 @@ a:hover {
 .park-nav svg {
   width: 24px;
   height: 24px;
+}
+
+/* Intro Section */
+
+.intro {
+  padding: 1.5rem;      /* match the card grid */
+  max-width: 100%;    /* optional: keeps content from stretching too wide */
+  margin: 0 auto;       /* centers on large screens */
+}
+
+.intro h1 {
+  font-size: 2.5rem;       /* Larger title */
+  font-family: --bs-font-serif;
+  margin-bottom: 0.25rem;   /* Tight spacing below */
+  margin-left: 1.5rem;
+}
+
+.intro p {
+  font-size: 1.25rem;      /* Slightly larger than body */
+  font-weight: 300;         /* Light text */
+  margin-top: 2rem;            /* No gap above */
+  margin-left: 1.5rem;
+  margin-bottom: 1.5rem;    /* Breathing room below */
+  line-height: 1.6;
+  color: #333;              /* Softer tone */
+}
+
+/* Info section layout */
+.info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;          /* space between cards */
+  padding: 1.5rem;      /* equal space to screen edge */
+  box-sizing: border-box;
+}
+
+.media-card p {
+  color: --bs-gray-500;
+}
+
+.media-card {
+  background: var(--bs-white);
+  padding: 1rem;
+  text-align: left;
+}
+
+.media-card a {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
+.media-card__img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.media-card__title {
+  font-size: 1.7rem;
+  margin: 0.5rem 0;
+}
+
+/* Footer alignment */
+#park-footer {
+  background: var(--bs-pampas);
+  padding: 2em;
+  font-size: 0.9rem;
+}
+
+.contact h3,
+.contact h4,
+.contact p {
+  margin-top: 0.75rem;   /* very small gap above */
+  margin-bottom: 0.25rem; /* very small gap below */
+  line-height: 1.4;       /* keep readable but tighter */
+  margin-left: 10px;
+}
+
+.contact h3 {
+  font-size: 2em;
+  font-family: --bs-font-serif;
+}
+
+.contact h4{
+  font-size: 1.65em;
+  font-weight: 700;
+}
+
+.contact p {
+  font-size: 1.5em;
+}
+
+/* Responsive for smaller screens */
+@media (max-width: 768px) {
+  .media-card__img {
+    height: 300px;
+  }
+  .info {
+    grid-template-columns: 1fr;
+  }
+  .contact h3 {
+    font-size: 1.5em;
+  }
+
+  .contact h4{
+    font-size: 1.2em;
+    font-weight: 700;
+  }
+
+  .contact p {
+    font-size: 0.9em;
+  }
 }
 
 /* Utility styles */
