--- a/src/css/content.css
+++ b/src/css/content.css
@@ -1,8 +1,16 @@
+body{display: grid;
+    grid-template-rows: auto 1fr auto;
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, sans-serif;
+};
+
 #screen {
     width: 100%;
     height: 100vh;
     background-color: lightgray;
 };
+
 
 #Q1, #Q2, #Q3{
     width: 80%;
@@ -12,3 +20,15 @@
     border: 1px solid #ccc;
     border-radius: 5px;
 };
+
+
+/* button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}; */
