--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,18 @@ p {
   border-radius: 50px;
 }
 
+#login{
+  width: 60%;
+  height: 500px;
+  margin: 0 auto; /* centers horizontally */
+  margin-top: 50px;
+  background-color: lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+}
+
 /* ---------------------------------------- Media Query Section ------------------------------------------- */
 
 @media screen and (max-width: 768px) {
